--- a/index.html
+++ b/index.html
@@ -1,12 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hola mundo! </title>
+    <title>Razonamiento Cuantitativo 1</title>
+    <meta name="description" content="Herramienta educativa para clasificar números en conjuntos(naturales, enteros, racionales) y resolver operaciones aritmeticascon explicaciones pasos a paso."
+    <link rel="stylesheet" href="css/styless.css"
+
 </head>
 <body>
-    
+<div class="principal">
+    <nav class="opciones-nav" role="tablist" >
+        <button class="opciones-nav" role="tab" >
+            <span class="nav-tab-text">Conjuntos de Números </span>
+        </button>
+        <button class="opciones-nav" role="tab">
+             <span class="nav-tab-text">Operaciones Aritmeticas </span> 
+        </button>
+         <button class="opciones-nav" role="tab">
+             <span class="nav-tab-text">:D </span> 
+        </button>
+    </nav>
+
+
+    <section id="panel-clasificar" class ="tab-panel active">
+        <div class ="card"> 
+            <h2>Clasificador de Conjunto de Números</h2>
+            <p>Ingresa un numero y selecciona un conjunto para verificar si pertenece a él</p>
+
+        </div>
+        <input type="text" id="Numero-input">
+
+        <select id="select-conjuntos">
+            <option value="naturales" >Naturales</option>
+            <option value="enteros">Enteros</option>
+            <option value="racionales">Racionales</option>
+        </select>
+
+
+    </section>
+    <h1>Hola mundo! </h1>
     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus nisi omnis ad dolorem quidem totam. Laborum, harum, totam nam magni sequi, consequatur deleniti quis libero enim iste veritatis autem earum?</p>
+     
+
+
+</div>
+
 </body>
+
 </html>
