Otro cambio que se hace a la pagina web

--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 
 </head>
 <body>
+    <header>
+        <div class="header">
+            <h1>Herramienta educativa para razonamiento Cuantitativo</h1>
+            <p class="header-desc">
+              Herramienta educativa para clasificar números en conjuntos (naturales, enteros y reales) y crear operaciones aritmeticas con explicaciones paso a paso.
+            </p>
+        </div>
+
+    </header>
     <div class="principal">
         <nav class="opciones-nav" role="tablist" >
             <button class="opciones-nav" role="tab" >
