--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Razonamiento Cuantitativo 1</title>
-    <meta name="description" content="Herramienta educativa para clasificar números en conjuntos(naturales, enteros, racionales) y resolver operaciones aritmeticascon explicaciones pasos a paso."
+    <meta name="description" content="Herramienta educativa para clasificar números en conjuntos(naturales, enteros, racionales) y resolver operaciones aritmeticascon explicaciones pasos a paso.">
     <link rel="stylesheet" href="css/styless.css"
 
 </head>
